# py-gc-dspadpcm

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  gc-dspadpcm-plan.md  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
python/gc_dspadpcm/: __init__.py  __main__.py  _lib.pyi
src/: bfstm.rs  codec.rs  lib.rs
tests/: bfstm.rs  codec.rs
tests/python/: conftest.py  test_gc_dspadpcm.py  test_reference_parity.py
tests/reference/: CMakeLists.txt  grok.c  main.c
