[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "gc-dspadpcm"
version = "0.2.0"
requires-python = ">=3.10"

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "gc_dspadpcm._lib"
python-source = "python"
python-version = "3.10"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
